Bug 27260 - Farsight2 does not build against libnice 0.0.11
Summary: Farsight2 does not build against libnice 0.0.11
Status: RESOLVED FIXED
Alias: None
Product: Farstream
Classification: Unclassified
Component: Core (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Olivier Crête
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-03-23 04:27 UTC by Dominique Leuenberger
Modified: 2010-04-09 14:28 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
No longer include udp-bsd.h. no need for it (437 bytes, patch)
2010-03-23 04:27 UTC, Dominique Leuenberger
Details | Splinter Review

Description Dominique Leuenberger 2010-03-23 04:27:28 UTC
Created attachment 34358 [details] [review]
No longer include udp-bsd.h. no need for it

Libnice 0.0.11 removed the heder udp-bsd.h from the public installed headers and as such can no longer be included by farsight.

This in itself is actually not even a problem, as farsight 0.0.17 does not require anything from there anyhow. I tracked the last reference to this header to around commit 90a5e2.

Recommend to remove the inclusion of said header (see attached patch).
Comment 1 Olivier Crête 2010-04-09 14:28:45 UTC
Fixed in git master

commit 2b06614455a059f61d3cba9bb86d10ae9c8bc347
Author: Olivier Crête <olivier.crete@collabora.co.uk>
Date:   Fri Apr 9 17:28:11 2010 -0400

    nicestreamtransmitter: Don't include udp-bsd.h
    
    It is no longer needed
    
    https://bugs.freedesktop.org/show_bug.cgi?id=27260


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.