nicestreamtransmitter: Don't include udp-bsd.h

It is no longer needed

https://bugs.freedesktop.org/show_bug.cgi?id=27260